MWPW-150660: fixed col spacing, refactored free plans, re-organized

--- a/express/blocks/ax-columns/ax-columns.css
+++ b/express/blocks/ax-columns/ax-columns.css
@@ -898,6 +898,7 @@
     flex-direction: row;
     text-align: left;
     align-items: center;
+    padding: 40px 0;
   }
 
   .section div.ax-columns > div {
