--- a/express/blocks/quotes/quotes.css
+++ b/express/blocks/quotes/quotes.css
@@ -2,6 +2,13 @@
   max-width: 375px;
 }
 
+.section:has(.quotes) {
+  padding: 40px;
+}
+.section:has(.quotes)>div>h2 {
+  margin-top: 80px;
+}
+
 .quotes-wrapper {
   margin: auto;
 }
