--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -96,12 +96,7 @@
     /* 45px */
   }
 }
-.section:has(.quotes) {
-  padding: 40px;
-}
-.section:has(.quotes)>div>h2 {
-  margin-top: 80px;
-}
+
 body {
   background-color: var(--body-background-color);
   font-family: var(--body-font-family);
